# SFO

./: CMakeLists.txt  README.md
CMakeModules/: FindGTSAM_UNSTABLE.cmake
deprecated/: Converter.cc  Converter.h  Frame.cc  Frame.h  ORBVocabulary.h  ORBextractor.cc  ORBextractor.h  ORBmatcher.cc  ORBmatcher.h  matrixUtils.cpp  matrixUtils.h
examples/: KITTI00-02.yaml  ffi-stereo.cpp  kitti-example.cpp  kitti-stereo.cpp  settings.yaml
examples/ROS/SFO/: CMakeLists.txt  FFI.yaml  manifest.xml
examples/ROS/SFO/src/: ros_stereo.cpp
include/: drawer.h  frameDrawer.h  gtsamTracker.h  loadFunctions.h  loopDetector.h  mapDrawer.h  orbExtractor.h  oxts.h  stereo.h  system.h  viewer.h
include/dev/: frameDrawer.h  mapDrawer.h
src/: SFO_main.cpp  drawer.cpp  drawer.h  frameDrawer.cpp  gtsamTracker.cpp  loadFunctions.cpp  loopDetector.cpp  mapDrawer.cpp  orbExtractor.cpp  stereo.cpp  system.cpp  viewer.cpp
src/dev/: frameDrawer.cpp  map.cpp
